@@ -1,6 +1,7 @@
 current command to verify run:
 
 gia ; ./gemc -gui=0 -n=100 -runWeightsFile=runWeights.txt  test.gcard
+
 -grunv=3
 -gsensitivityv=3
 -gflowv=3
