@@ -1,3 +1,6 @@
+11/16/17
+ - using header api
+
 11/8/17
  - formatting options with GOPTIONITEM
  - creating and passing gmediaFactory map to run
